<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmTelligence</string>
    <string name="em">Em</string>
	<string name="telligence">Telligence</string>
	
    <string name="record">Record</string>
    <string name="track">Track</string>
    <string name="myFirebaseRef">https://emtelligence.firebaseio.com/</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="i_feel...">I feel&#8230;</string>
    <string name="i_feel">I feel</string>

	<string name="because">because&#8230;</string>
	<string name="optionalForm">This affected me because&#8230;</string>
	
	<string name="see">What would you like to see?</string>
	<string name="journal">Journal</string>
    <string name="progress_plot">Progress plot</string>
    <string name="settings_txt">Set Notifications</string>
	
    <string name="reminder_txt">Add email to receive daily reminder</string>
    
	<string name="positive_sign">positive</string>
	<string name="negative_sign">negative</string>
	<string name="neutral_sign">neutral</string>
	
	<!-- Positive emotions -->
	<string name="happy">happy</string>
	<string name="attractive">attractive</string>
	<string name="confident">confident</string>
	<string name="active">active</string>
	<string name="focused">focused</string>
	<string name="calm">calm</string>
	<string name="funny">funny</string>
	<string name="intelligent">intelligent</string>
	<string name="strong">strong</string>
	<string name="proud">proud</string>
	
	<!-- Neutral emotions -->
	<string name="indifferent">indifferent</string>
	<string name="bored">bored</string>
	<string name="confused">confused</string>
		
	<!-- Negative emotions -->
	<string name="sad">sad</string>
	<string name="anxious">anxious</string>
	<string name="angry">angry</string>	
	<string name="envious">envious</string>	
	<string name="tired">tired</string>	
	<string name="surprised">surprised</string>
	<string name="lazy">lazy</string>
	
	<string name="submit">Submit</string>

	<string name="entry_emotion">emotion</string>
	<string name="entry_description">description</string>
	<string name="entry_date">date</string>
	<string name="entry_score">score</string>
	<string name="entry_id">entryId</string>
	<string name="switch_graph">Switch graph view</string>
	<string name="graph1_explanation">This plot shows your emotional gains and losses for each day.</string>
	<string name="graph2_explanation">This plot shows your cumulative emotional score to date.</string>	

</resources>
