<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/i_feel..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonHappy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/happy_hov"
                android:onClick="clickEmoticon" 
                android:paddingBottom="15dp"
                android:text="@string/happy"
                android:textSize="12sp"
                android:width="30dip" />

            <Button
                android:id="@+id/buttonConfident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/confident_hov"
                android:paddingBottom="15dp"
                android:text="@string/confident"
                android:textSize="12sp"
                android:width="30dip" />

<!--             <Button
                android:id="@+id/buttonActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/active3"
                android:paddingBottom="15dp"
                android:text="@string/active"
                android:textSize="12sp"
                android:width="30dip" /> -->

            <ToggleButton
                android:id="@+id/buttonActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/active_hov"
                android:textOff="@string/active"
                android:textOn="@string/active" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

             <Button
                android:id="@+id/buttonAttractive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/attractive_hov"
                android:paddingBottom="15dp"
                android:text="@string/attractive"
                android:textSize="12sp"
                android:width="30dip" /> 

            <Button
                android:id="@+id/buttonFocused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/focused_hov"
                android:paddingBottom="15dp"
                android:text="@string/focused"
                android:textSize="12sp"
                android:width="30dip" />

            <Button
                android:id="@+id/buttonCalm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/calm_hov"
                android:paddingBottom="15dp"
                android:text="@string/calm"
                android:textSize="12sp"
                android:width="30dip" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonFunny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/funny_hov"
                android:paddingBottom="15dp"
                android:text="@string/funny"
                android:textSize="12sp"
                android:width="30dip" />

            <Button
                android:id="@+id/buttonSurprised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/surprised_hov"
                android:paddingBottom="15dp"
                android:text="@string/surprised"
                android:textSize="12sp"
                android:width="30dip" />


        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_marginBottom="18dp"
        android:text="@string/submit" />

</RelativeLayout>