<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/i_feel..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonBored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/bored"
                android:text="@string/bored"
                android:textSize="12sp"
                android:width="30dip" />

            <Button
                android:id="@+id/buttonConfused"
               	android:drawableTop="@drawable/confused"
               	android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="30dip"
                android:textSize="12sp"
                android:text="@string/confused" />
            
            <Button
                android:id="@+id/buttonIndifferent"
               	android:drawableTop="@drawable/indifferent"
               	android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="30dip"
                android:textSize="12sp"
                android:text="@string/indifferent" />
            
        </TableRow>

 <!--        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

             <Button
                android:id="@+id/buttonAttractive"
               	android:drawableTop="@drawable/attractive"
               	android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="30dip"
                android:textSize="12sp"
                android:text="@string/attractive" />

            <Button
                android:id="@+id/buttonFocused"
               	android:drawableTop="@drawable/focused"
               	android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="30dip"
                android:textSize="12sp"
                android:text="@string/focused" />
            
            <Button
                android:id="@+id/buttonCalm"
               	android:drawableTop="@drawable/calm"
               	android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="30dip"
                android:textSize="12sp"
                android:text="@string/calm" />

        </TableRow> -->

       
    </TableLayout>

</RelativeLayout>